fixed visibility of password on login

--- a/src/App.css
+++ b/src/App.css
@@ -328,6 +328,7 @@ input{
   background-color: var(--primary);
   width: 100%;
   height: 100%;
+  color: var(--trinary);
 }
 
 .chat-username{
